--- a/src/components/common/Button/Button.module.css
+++ b/src/components/common/Button/Button.module.css
@@ -6,6 +6,7 @@
   border: 1px solid var(--color-primary);
   border-radius: var(--spacing-md);
   font-size: var(--font-size-lg);
+  background-color: #fff;
 }
 
 .buttonBase:hover {
