--- a/src/components/common/Button/Button.module.css
+++ b/src/components/common/Button/Button.module.css
@@ -33,6 +33,8 @@
 .buttonDisabled:hover,
 .buttonDisabled:active {
   opacity: 0.5;
+  cursor: not-allowed;
+  pointer-events: none;
 }
 
 .buttonOutlined {
